--- a/AllstarCleanings.css
+++ b/AllstarCleanings.css
@@ -662,6 +662,15 @@
     padding-right: 50px;
   }
 
+  .u-section-2 .u-text-3 {
+    width: auto;
+    margin-top: 43px;
+  }
+
+  .u-section-2 .u-text-4 {
+    margin-top: 17px;
+  }
+
   .u-section-2 .u-group-1 {
     min-height: 115px;
     margin-left: auto;
@@ -1185,6 +1194,60 @@
   .u-section-3 .u-repeater-1 {
     grid-template-columns: calc(50% - 10px) calc(50% - 10px);
   }
+
+  .u-section-3 .u-text-2 {
+    width: auto;
+    margin-left: -3px;
+    margin-right: -3px;
+  }
+
+  .u-section-3 .u-text-3 {
+    width: auto;
+    margin-left: -3px;
+    margin-right: -3px;
+  }
+
+  .u-section-3 .u-text-4 {
+    width: auto;
+    margin-left: -3px;
+    margin-right: -3px;
+  }
+
+  .u-section-3 .u-text-5 {
+    width: auto;
+    margin-left: -3px;
+    margin-right: -3px;
+  }
+
+  .u-section-3 .u-text-6 {
+    width: auto;
+    margin-left: -3px;
+    margin-right: -3px;
+  }
+
+  .u-section-3 .u-text-7 {
+    width: auto;
+    margin-left: -3px;
+    margin-right: -3px;
+  }
+
+  .u-section-3 .u-text-8 {
+    width: auto;
+    margin-left: -3px;
+    margin-right: -3px;
+  }
+
+  .u-section-3 .u-text-9 {
+    width: auto;
+    margin-left: -3px;
+    margin-right: -3px;
+  }
+
+  .u-section-3 .u-text-10 {
+    width: auto;
+    margin-left: -3px;
+    margin-right: -3px;
+  }
 } .u-section-4 {
   background-image: linear-gradient(0deg, rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url("images/pexels-marc-mueller-380768-24.jpg");
   background-position: 50% 50%;
@@ -1455,6 +1518,7 @@
   .u-section-4 .u-group-1 {
     width: 500px;
     min-height: 615px;
+    margin-top: 447px;
   }
 
   .u-section-4 .u-container-layout-1 {
@@ -1462,11 +1526,35 @@
   }
 
   .u-section-4 .u-list-1 {
-    margin-top: -1016px;
-    margin-bottom: 199px;
+    margin-top: -1013px;
+    margin-bottom: 60px;
     width: auto;
     margin-right: initial;
     margin-left: initial;
+  }
+
+  .u-section-4 .u-text-3 {
+    width: auto;
+    margin-left: -3px;
+    margin-right: -3px;
+  }
+
+  .u-section-4 .u-text-5 {
+    width: auto;
+    margin-left: -3px;
+    margin-right: -3px;
+  }
+
+  .u-section-4 .u-text-7 {
+    width: auto;
+    margin-left: -3px;
+    margin-right: -3px;
+  }
+
+  .u-section-4 .u-text-9 {
+    width: auto;
+    margin-left: -3px;
+    margin-right: -3px;
   }
 }
 
@@ -1495,7 +1583,8 @@
 
   .u-section-4 .u-list-1 {
     width: 260px;
-    margin: -1479px auto -338px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .u-section-4 .u-repeater-1 {
@@ -1503,42 +1592,70 @@
   }
 
   .u-section-4 .u-container-layout-2 {
-    padding-left: 30px;
-    padding-right: 30px;
+    padding: 29px 17px;
+  }
+
+  .u-section-4 .u-icon-1 {
+    margin-top: 1px;
   }
 
   .u-section-4 .u-text-2 {
-    margin-left: 0;
-    margin-right: 0;
+    margin-left: 13px;
+    margin-right: 13px;
+  }
+
+  .u-section-4 .u-text-3 {
+    margin: 20px 0 -1px;
   }
 
   .u-section-4 .u-container-layout-3 {
-    padding-left: 30px;
-    padding-right: 30px;
+    padding: 29px 17px;
+  }
+
+  .u-section-4 .u-icon-2 {
+    margin-top: 1px;
   }
 
   .u-section-4 .u-text-4 {
-    margin-left: 0;
-    margin-right: 0;
+    margin-left: 13px;
+    margin-right: 13px;
+  }
+
+  .u-section-4 .u-text-5 {
+    margin: 20px 0 -1px;
   }
 
   .u-section-4 .u-container-layout-4 {
-    padding-left: 30px;
-    padding-right: 30px;
+    padding: 29px 17px;
+  }
+
+  .u-section-4 .u-icon-3 {
+    margin-top: 1px;
   }
 
   .u-section-4 .u-text-6 {
-    margin-left: 0;
-    margin-right: 0;
+    margin-left: 13px;
+    margin-right: 13px;
+  }
+
+  .u-section-4 .u-text-7 {
+    margin: 20px 0 -1px;
   }
 
   .u-section-4 .u-container-layout-5 {
-    padding-left: 30px;
-    padding-right: 30px;
+    padding: 29px 17px;
+  }
+
+  .u-section-4 .u-icon-4 {
+    margin-top: 1px;
   }
 
   .u-section-4 .u-text-8 {
-    margin-left: 0;
-    margin-right: 0;
+    margin-left: 13px;
+    margin-right: 13px;
+  }
+
+  .u-section-4 .u-text-9 {
+    margin: 20px 0 -1px;
   }
 }
